<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main_activities.SignUp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background2" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/coffee"
        android:fontFamily="@font/num3"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/russ"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/registration"
        android:textSize="@dimen/_30ssp"
        android:tint="#66FF0000"
        android:alpha="0.75"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/_250sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:tint="#66FF0000"
        android:alpha="0.75">
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/assert_password"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/_150sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/russ"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/cont"

        android:textSize="@dimen/_20ssp"
        android:alpha="0.8"/>



</LinearLayout>
</RelativeLayout>

