<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".activities.main_activities.LogIn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:layout_below="@id/title"
            android:src="@drawable/pic" />
        <TextView
            android:id="@+id/title"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_23ssp"
            android:background="@color/coffee"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/num3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:layout_below="@id/title"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:fontFamily="@font/russ"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/welcome"
                android:textSize="@dimen/_30ssp"
                android:tint="#66FF0000"
                android:alpha="0.75"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/_250sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background"
            android:tint="#66FF0000"
            android:alpha="0.85">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/email" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:inputType="textPassword"
                android:hint="@string/password" />
            <TextView
                android:id="@+id/incorrect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/incorrect_filling"
                android:textColor="@color/red"
                android:visibility="gone"
                android:layout_gravity="center"
                android:textSize="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10sdp"/>
        </LinearLayout>
            <Button
                android:id="@+id/login"

                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_25ssp"
                android:textColor="@color/white"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/russ"
                android:tint="#66FF0000"
                android:alpha="0.8"
                android:text="@string/enter" />
            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_25ssp"
                android:tint="#66FF0000"
                android:alpha="0.8"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/russ"
                android:text="@string/create_account"/>
        </LinearLayout>
    </RelativeLayout>

