<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activities.main_activities.FillingUserInfo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/black">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:background="@color/coffee"
            android:fontFamily="@font/num3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_23ssp"
            android:layout_alignParentTop="true"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pic"
            android:layout_below="@id/title"/>

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_38sdp">

            <FrameLayout
                android:id="@+id/layoutPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/for_photo"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"/>
                <TextView
                    android:id="@+id/addImageText"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:text="+"
                    android:textColor="@color/coffee"
                    android:gravity="center"
                    android:textSize="@dimen/_30sdp"
                    />

            </FrameLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/light_grey"/>


                <RadioButton
                    android:id="@+id/F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="@dimen/_15ssp"

                    android:textColor="@color/light_grey" />
            </RadioGroup>

            <EditText
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_age"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/hobby"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hobbies"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_about"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cont"
                android:fontFamily="@font/russ"
                android:textSize="@dimen/_25ssp"
                android:tint="#66FF0000"
                android:alpha="0.8"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>
        </RelativeLayout>
</ScrollView>